# gherkins

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml
gherkins/: Serloc.py  StageManager.py  __init__.py  requirements.txt
tests/: test_stage_manager.py
