[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gherkins"
version = "0.1.0"
description = "A lightweight Python framework for defining and running sequential deployment pipelines over SSH."
authors = [
    { name = "Sravan Gogulapati" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["deployment", "automation", "ssh", "devops", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "paramiko>=4.0",
    "paramiko-expect>=0.3.5",
    "scp>=0.15",
    "colorama>=0.4",
    "rich>=13.0",
    "bcrypt>=5.0",
    "cryptography>=40.0",
    "PyNaCl>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gherkins*"]
